2008-09-10  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for charset-layer error levels.

	* HTML.pm.src: Don't specify |text| argument for the
	|chardecode:fallback| error, since it is not the encoding
	being used alternatively.

2008-09-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for |XSLT-compat| (HTML5 revision 2141).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* CacheManifest.pm: Support for extensibility (HTML5 revision 2051).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Bug fix and sync with the spec with regard
	to after after frameset insertion mode processing (HTML5
	revision 1909).  Note that the implementation was wrong
	per the old spec before the r1909 changes.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: scope=auto algorithm fix synced with the
	spec (HTML5 revision 2093).
	($process_row): Algorithm step numbers synced with the
	spec (HTML5 revision 2092).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: Zs is not what we want; we want White_Space! (HTML5
	revision 2094).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Support for image/svg+xml (HTML5 revision 2096).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: '"' and "'" at the end of attribute
	name (after another attribute) now raise parse error (HTML5
	revision 2123).  Empty unquoted attribute values are no
	longer allowed (HTML5 revision 2122).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* mkhtmlparser.pl: Support for MathML |definitionURL| attribute (HTML5
	revision 2130).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: |xml:lang| attribute value must be same
	as |lang| attribute value for HTML elements (HTML5 revision 2062
	and so on).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Error level definition for |xml_id_error|
	was missing.

	* URIChecker.pm: The end of the URL should be marked as the
	error location for an empty path error.  The position