@@ -1,5 +1,9 @@
 2008-09-10  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Ignore punctuations in charset names.
+
+2008-09-10  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm: Support for charset-layer error levels.
 
 	* HTML.pm.src: Don't specify |text| argument for the
